<resources>
    <string name="a_review_by">A review by</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="age_rating_title">Age rating</string>
    <string name="all_languages">All languages</string>
    <string name="all_movies">All movies</string>
    <string name="all_people">All people</string>
    <string name="all_series">All series</string>
    <string name="app_name">Movies &#038; Series</string>
    <string name="backdrops_title">Backdrops</string>
    <string name="belongs_to_collection">Belongs to</string>
    <string name="budget_title">Budget</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="cast_of_characters">Main cast</string>
    <string name="content_description_backdrop">Backdrop</string>
    <string name="content_description_gradient">Gradient background</string>
    <string name="content_description_icon">Icon</string>
    <string name="content_description_omdb">The Open Movie Database</string>
    <string name="content_description_person_image">Person</string>
    <string name="content_description_poster">Poster</string>
    <string name="content_description_tmdb">The Movie Database</string>
    <string name="department_production">Production</string>
    <string name="department_writing">Writing</string>
    <string name="dont_open_this_again">You are already here</string>
    <string name="fetching_info">Fetching information&#8230;</string>
    <string name="fetching_movie_cast_crew">Fetching cast &#038; crew information&#8230;</string>
    <string name="fetching_movie_info">Fetching movie information&#8230;</string>
    <string name="fetching_movie_media">Fetching movie videos &#038; images&#8230;</string>
    <string name="fetching_movie_reviews">Fetching user reviews&#8230;</string>
    <string name="film_crew">Main film crew</string>
    <string name="full_size_image_description">Full size image</string>
    <string name="link_facebook">Facebook</string>
    <string name="link_home">Home</string>
    <string name="link_imdb">IMDB</string>
    <string name="link_instagram">Instagram</string>
    <string name="link_twitter">Twitter</string>
    <string name="list_order">Sort order</string>
    <string name="menu_home">Home</string>
    <string name="menu_language">Language</string>
    <string name="menu_region">Country / Region</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sort">Sort order</string>
    <string name="most_popular">Most popular</string>
    <string name="movie_details_info">Info</string>
    <string name="movie_details_cast_crew">Cast &#038; Crew</string>
    <string name="movie_details_reviews">Reviews</string>
    <string name="movie_details_media">Media</string>
    <string name="movies">Movies</string>
    <string name="movies_sort_by_favorites">Favorites</string>
    <string name="movies_sort_by_online">Online</string>
    <string name="movies_sort_by_now_playing">Now playing</string>
    <string name="movies_sort_by_now_playing_in_theatres">Now playing in theatres</string>
    <string name="movies_sort_by_popular">Popular Movies</string>
    <string name="movies_sort_by_released_this_week">This week</string>
    <string name="movies_sort_by_top_rated">Top rated</string>
    <string name="movies_sort_by_upcoming">Upcoming movies</string>
    <string name="movies_sort_by_upcoming_in_theatres">Upcoming movies in theatres</string>
    <string name="no_author">Unknown author</string>
    <string name="no_connection">There is no connection to the internet right now.</string>
    <string name="no_content">Nothing to show&#8230;</string>
    <string name="no_date">No date</string>
    <string name="no_language">No mLanguage</string>
    <string name="no_movie_cast_crew">We have not found cast &#038; crew members for this movie.</string>
    <string name="no_movie_info">There is no synopsis, release dates or other information about this movie at this time.</string>
    <string name="no_movie_media">We do not have videos or images of this movie right now. Meanwhile, maybe you\'re lucky here:</string>
    <string name="no_movie_overview">There is no available overview in %s for this movie right now.</string>
    <string name="no_movie_reviews">No users have yet written their opinion about this movie.</string>
    <string name="no_name">No name</string>
    <string name="no_movies_results">No results found. Try changing the movie filters.</string>
    <string name="no_results">No results found</string>
    <string name="no_title">No title</string>
    <string name="original_language">Original mLanguage</string>
    <string name="original_title">Original title</string>
    <string name="people">People</string>
    <string name="person_details_bio">Bio</string>
    <string name="person_details_movies">Movies</string>
    <string name="person_details_tv">TV</string>
    <string name="person_details_images">Images</string>
    <string name="popular">Popular</string>
    <string name="posters_title">Posters</string>
    <string name="recommended_movies">Recommended movies</string>
    <string name="release_status_rumored">Rumored</string>
    <string name="release_status_planned">Planned</string>
    <string name="release_status_in_production">In Production</string>
    <string name="release_status_post_production">Post Production</string>
    <string name="release_status_canceled">Canceled</string>
    <string name="release_type_premiere">%s Premiere</string>
    <string name="release_type_theatrical_limited">%s Theatrical (limited)</string>
    <string name="release_type_theatrical">%s Theatrical</string>
    <string name="release_type_digital">%s Digital</string>
    <string name="release_type_physical">%s Physical</string>
    <string name="release_type_tv">%s TV</string>
    <string name="revenue_title">Revenue</string>
    <string name="runtime">Runtime</string>
    <string name="score_title">TMDB score</string>
    <string name="score_imdb">IMDB</string>
    <string name="score_rotten_tomatoes">Rotten Tomatoes</string>
    <string name="score_metacritic">Metacritic</string>
    <string name="score_tmdb">The Movie Database</string>
    <string name="series">Series</string>
    <string name="share_this">Share this</string>
    <string name="sort_movies_by_genre">Movies by genre</string>
    <string name="sort_movies_by_keyword">Movies by keyword</string>
    <string name="sort_order_changed">Sort order changed to %s</string>
    <string name="spoken_languages">Also spoken</string>
    <string name="string_hours">h</string>
    <string name="string_minutes">m</string>
    <string name="subtitle_activity_main">and people who make them</string>
    <string name="synopsis">Synopsis</string>
    <string name="thumbnail_description">Thumbnail image</string>
    <string name="transition_backdrop">backdrop_transition</string>
    <string name="transition_poster">poster_transition</string>
    <string name="transition_review">review_transition</string>
    <string name="tv_airing_today">Airing today</string>
    <string name="tv_on_the_air">On the air</string>
    <string name="videos_title">Related videos</string>
    <string name="view_all">View all</string>
    <string name="view_all_cast">View the full list with the %d cast members of this movie</string>
    <string name="view_all_now_playing_movies">View the full list of %d movies that are now playing in theaters in %s</string>
    <string name="view_all_recommended_movies">View the full list of %d recommendations, based on other users\' ratings</string>
    <string name="view_all_this_week_released_movies">View the full list of %d movies to be released this week in %s</string>
    <string name="view_all_upcoming_movies">View the full list of %d upcoming movies to be released in %s</string>
    <string name="preferences_order_key">order</string>
    <string name="preferences_order_title">Order</string>
    <string name="preferences_order_descending_title">Descending order</string>
    <string name="preferences_order_ascending_title">Ascending order</string>
    <string name="preferences_language_key">mLanguage</string>
    <string name="preferences_language_title">Language for results</string>
    <string name="preferences_language_locale_title">System mLanguage</string>
    <string name="preferences_language_xx_title">No Language</string>
    <string name="preferences_language_aa_title">Afar</string>
    <string name="preferences_language_af_title">Afrikaans</string>
    <string name="preferences_language_ak_title">Akan</string>
    <string name="preferences_language_an_title">Aragonese</string>
    <string name="preferences_language_as_title">Assamese</string>
    <string name="preferences_language_av_title">Avaric</string>
    <string name="preferences_language_ae_title">Avestan</string>
    <string name="preferences_language_ay_title">Aymara</string>
    <string name="preferences_language_az_title">Azerbaijani</string>
    <string name="preferences_language_ba_title">Bashkir</string>
    <string name="preferences_language_bm_title">Bambara</string>
    <string name="preferences_language_bi_title">Bislama</string>
    <string name="preferences_language_bo_title">Tibetan</string>
    <string name="preferences_language_br_title">Breton</string>
    <string name="preferences_language_ca_title">Catalan</string>
    <string name="preferences_language_cs_title">Czech</string>
    <string name="preferences_language_ce_title">Chechen</string>
    <string name="preferences_language_cu_title">Slavic</string>
    <string name="preferences_language_cv_title">Chuvash</string>
    <string name="preferences_language_kw_title">Cornish</string>
    <string name="preferences_language_co_title">Corsican</string>
    <string name="preferences_language_cr_title">Cree</string>
    <string name="preferences_language_cy_title">Welsh</string>
    <string name="preferences_language_da_title">Danish</string>
    <string name="preferences_language_de_title">German</string>
    <string name="preferences_language_dv_title">Divehi</string>
    <string name="preferences_language_dz_title">Dzongkha</string>
    <string name="preferences_language_eo_title">Esperanto</string>
    <string name="preferences_language_et_title">Estonian</string>
    <string name="preferences_language_eu_title">Basque</string>
    <string name="preferences_language_fo_title">Faroese</string>
    <string name="preferences_language_fj_title">Fijian</string>
    <string name="preferences_language_fi_title">Finnish</string>
    <string name="preferences_language_fr_title">French</string>
    <string name="preferences_language_fy_title">Frisian</string>
    <string name="preferences_language_ff_title">Fulah</string>
    <string name="preferences_language_gd_title">Gaelic</string>
    <string name="preferences_language_ga_title">Irish</string>
    <string name="preferences_language_gl_title">Gallegan</string>
    <string name="preferences_language_gv_title">Manx</string>
    <string name="preferences_language_gn_title">Guarani</string>
    <string name="preferences_language_gu_title">Gujarati</string>
    <string name="preferences_language_ht_title">Haitian; Haitian Creole</string>
    <string name="preferences_language_ha_title">Hausa</string>
    <string name="preferences_language_sh_title">Serbo-Croatian</string>
    <string name="preferences_language_hz_title">Herero</string>
    <string name="preferences_movies_how_title">How</string>
    <string name="preferences_movies_how_theaters_title">In theaters</string>
    <string name="preferences_movies_how_digital_title">Online</string>
    <string name="preferences_movies_how_physical_title">On DVD/Blu-ray</string>
    <string name="preferences_movies_when_title">When</string>
    <string name="preferences_movies_where_title">Where</string>
    <string name="action_search">Search</string>
</resources>