<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.ConfigNowPlayingMoviesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/big_padding"
        android:paddingEnd="@dimen/regular_padding"
        android:paddingStart="@dimen/regular_padding">

        <TextView
            style="@style/PreferencesOptionsTitleStyle"
            android:text="@string/preferences_movies_how_title" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/config_now_playing_movies_how_theaters"
                style="@style/PreferenceRadioButtonStyle"
                android:text="@string/preferences_movies_how_theaters_title" />

            <RadioButton
                android:id="@+id/config_now_playing_movies_how_digital"
                style="@style/PreferenceRadioButtonStyle"
                android:text="@string/preferences_movies_how_digital_title" />

            <RadioButton
                android:id="@+id/config_now_playing_movies_how_physical"
                style="@style/PreferenceRadioButtonStyle"
                android:text="@string/preferences_movies_how_physical_title" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>