<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/home_all_movies_cardview"
        style="@style/HomeCardViewStyle"
        android:layout_width="match_parent">

        <TextView
            style="@style/HomeMainOptionStyle"
            android:background="#9C27B0"
            android:drawableStart="@drawable/ic_local_movies_white_24dp"
            android:text="@string/all_movies" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/home_all_series_cardview"
        style="@style/HomeCardViewStyle"
        android:layout_width="match_parent">

        <TextView
            style="@style/HomeMainOptionStyle"
            android:background="#E91E63"
            android:drawableStart="@drawable/ic_tv_white_24dp"
            android:text="@string/all_series" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/home_all_people_cardview"
        style="@style/HomeCardViewStyle"
        android:layout_width="match_parent">

        <TextView
            style="@style/HomeMainOptionStyle"
            android:background="#F44336"
            android:drawableStart="@drawable/ic_person_white_24dp"
            android:text="@string/all_people" />
    </android.support.v7.widget.CardView>
</LinearLayout>