<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/config_filtered_movies_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/big_padding"
    android:paddingEnd="@dimen/regular_padding"
    android:paddingStart="@dimen/regular_padding">

    <TextView
        android:id="@+id/config_filtered_movies_how_title"
        style="@style/PreferencesOptionsTitleStyle"
        android:text="@string/preferences_movies_how_title" />

    <RadioGroup
        android:id="@+id/config_filtered_movies_how_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/config_filtered_movies_when_title"
        style="@style/PreferencesOptionsTitleStyle"
        android:text="@string/preferences_movies_when_title" />

    <RadioGroup
        android:id="@+id/config_filtered_movies_when_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/config_filtered_movies_where_title"
        style="@style/PreferencesOptionsTitleStyle"
        android:text="@string/preferences_movies_where_title" />

    <RadioGroup
        android:id="@+id/config_filtered_movies_where_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>