<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_airing_today_cardview"
    style="@style/HomeCardViewStyle"
    android:layout_width="match_parent"
    app:cardCornerRadius="@dimen/small_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/home_airing_today_viewflipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoStart="true"
            android:background="@color/colorSeriesPrimaryDark"
            android:flipInterval="6000"
            android:interpolator="@android:anim/linear_interpolator">

            <!-- Children views will be added programmatically. -->

        </ViewFlipper>

        <TextView
            style="@style/HomeUpRightTextStyle"
            android:backgroundTint="@color/colorSeriesPrimary"
            android:drawableEnd="@drawable/ic_tv_white_18dp"
            android:text="@string/series" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/regular_padding"
            android:layout_above="@id/home_airing_today_title"
            android:background="@drawable/gradient_vertical_bottom"
            android:backgroundTint="@color/colorSeriesPrimary"
            android:contentDescription="@string/content_description_gradient" />

        <TextView
            android:id="@+id/home_airing_today_title"
            style="@style/HomeBottomTextStyle"
            android:layout_below="@+id/home_airing_today_viewflipper"
            android:background="@color/colorSeriesPrimary"
            android:text="@string/tv_airing_today" />

        <ProgressBar
            android:id="@+id/home_airing_today_loading_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</android.support.v7.widget.CardView>